--- a/assets/styles.css
+++ b/assets/styles.css
@@ -142,11 +142,27 @@ textarea.contactFormField{
     padding: 20px;
     background: #fff;
     z-index: 999999;
-    border: 1px solid #f0f0f0;
+    border: 1px solid var(--primary-color);
     width: 360px;
-    border-top: 3px solid var(--primary-color);
-    border-bottom: 1px solid var(--primary-color);
     display: none;
+    padding-top: 101px;
+    border-radius: 4px;
+}
+.contact-wrap-header {
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 20px;
+    height: 50px;
+    background: var(--primary-color);
+}
+.contact-wrap-header .shortly-msg {
+    line-height: 1.3;
+    padding: 10px;
+    margin-bottom: 15px;
+    background: rgb(250, 249, 249);
+    border-radius: 4px;
+    display: block;
 }
 .floated-contact-form-wrap.open{
     display: block;
@@ -193,7 +209,7 @@ textarea.contactFormField{
     top: 0;
 }
 .close-floated::before {
-    width: 40px;
+    width: 28px;
     height: 2px;
     background: #000;
     content: "";
@@ -204,7 +220,7 @@ textarea.contactFormField{
 }
 
 .close-floated::after {
-    width: 40px;
+    width: 28px;
     height: 2px;
     background: #000;
     content: "";
@@ -222,7 +238,9 @@ textarea.contactFormField{
         left: 0;
         right: initial;
         top: 0;
-        padding: 80px 25px;
+        padding: 140px 25px;
+        border-radius: 0;
+        border: 0;
     }
     .floated-contact-triger {
         z-index: 9999999;
