--- a/assets/styles.css
+++ b/assets/styles.css
@@ -128,12 +128,15 @@ textarea.contactFormField{
     z-index: 9999;
     padding: 15px;
     line-height: 1;
-    background: rgb(229, 226, 223);
+    background: rgb(11, 76, 128);
     border-radius: 50px;
     width: 65px;
     height: 65px;
     display: flex;
     align-items: center;
+}
+.floated-contact-triger svg {
+    color: #fff;
 }
 .floated-contact-form-wrap {
     position: fixed;
@@ -211,7 +214,7 @@ textarea.contactFormField{
 .close-floated::before {
     width: 28px;
     height: 2px;
-    background: #000;
+    background: #fff;
     content: "";
     position: absolute;
     left: 50%;
@@ -222,16 +225,82 @@ textarea.contactFormField{
 .close-floated::after {
     width: 28px;
     height: 2px;
-    background: #000;
+    background: #fff;
     content: "";
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%) rotate(-45deg);
 }
+/*Write Us*/
+
+.write-us-btn {
+    background: var(--primary-color);
+    border-radius: 4px;
+    padding: 5px 34px;
+    cursor: pointer;
+    color: #fff;
+    border: 1px solid #0e4771;
+    line-height: 1.6;
+    margin-top: 15px;
+}
+.write-us {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0,0,0,.2);
+    backdrop-filter: blur(8px);
+    width: 100%;
+    height: 100%;
+}
+.write-us-form {
+    width: 630px;
+    padding: 50px;
+    background: #fff;
+    border: 1px solid #ddd;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    border-radius: 5px;
+}
+.write-us.floated-contact-form-wrap {
+    display: block;
+    padding: 0;
+    border: 0;
+}
+.floated-contact-form-wrap.write-us .input-wrap.gac-subject-in {
+    display: flex;
+}
+.closeButton {
+    position: absolute;
+    right: 18px;
+    top: 20px;
+    font-size: 50px;
+    line-height: 0;
+    height: 25px;
+    padding: 7px;
+    cursor: pointer;
+}
+.hide {
+    display: none;
+}
 
 /*Small Divice*/
 @media only screen and (max-width: 580px){
+    .write-us-form {
+        top: 0;
+        left: 0;
+        transform: none;
+        width: 100%;
+        height: 100%;
+        padding-top: 100px;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    .contact-wrap-header .shortly-msg {
+        margin-top: 20px;
+    }
     .floated-contact-form-wrap {
         width: 100%;
         height: 100%;
